ipc/ipdl/test/ipdl/error/SyncAsyncManager.ipdl
//error: protocol `SyncAsyncManagee' requires more powerful send semantics than its manager `SyncAsyncManager' provides

include protocol SyncAsyncManagee;

[ChildProc=any]
async protocol SyncAsyncManager {
    manages SyncAsyncManagee;
parent:
    async SyncAsyncManagee();
};
